Fix perspective origin issues on Safari 15 and iOS
- The perspective origin would be incorrectly calculated, causing the
  back side of the carousel to appear in view
- Remove the inherited perspective style on the gallery and instead
  preserve the 3D transform for the parent to apply perspective

--- a/src/components/CarouselGallery/CarouselGallery.module.scss
+++ b/src/components/CarouselGallery/CarouselGallery.module.scss
@@ -16,11 +16,11 @@
 
 	$r: MuseumRoom.$r;
 	$offset: MuseumRoom.$offset;
-	perspective: inherit;
-	perspective-origin: inherit;
 
-	/* for certain versions of Safari, perspective origin is shifted incorrectly */
-	transform-origin: center center (-$offset/2.5);
+	/* for certain versions of Safari and iOS, perspective origin is shifted incorrectly
+	   when perspective is applied to the element rather than preserved through transform */
+	transform-origin: center center (-$offset);
+	transform-style: preserve-3d; // instead of inheriting perspective
 
 	.paintings {
 		height: 100%;
